infras/k8s-dev/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  rules:
    - host: isnex.mdop297.vn
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: isnex-auth-svc
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: isnex-auth-svc
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: isnex-auth-svc
                port:
                  number: 3000
